<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>klab-services</artifactId>
        <groupId>org.integratedmodelling</groupId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>
    <artifactId>klab.component.geospatial</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
        <plugin.id>klab.component.geospatial</plugin.id>
        <plugin.class>org.integratedmodelling.geospatial.GeospatialPlugin</plugin.class>
        <plugin.version>${project.version}</plugin.version>
        <plugin.provider>klab</plugin.provider>
        <plugin.dependencies/>

        <klab.version>1.0.0-SNAPSHOT</klab.version>
        <geotools.version>34.0</geotools.version>
        <jts.version>1.20.0</jts.version>
        <h2gis.version>1.5.0</h2gis.version>
        <hortonmachine.version>0.11.1-SNAPSHOT</hortonmachine.version>
        <junit-version>5.13.4</junit-version>
        <mockito-version>5.18.0</mockito-version>
        <maven.surefire.version>3.5.3</maven.surefire.version>
        <jackson-version>2.19.0</jackson-version>
        <imageio-ext.version>2.0.1</imageio-ext.version>
    </properties>

    <licenses>
        <license>
            <name>GNU Affero General Public License (AGPL) version 3.0</name>
            <url>http://www.gnu.org/licenses/agpl-3.0.en.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Ferdinando Villa</name>
            <email>ferdinando.villa@bc3research.org</email>
            <organization>Basque Centre for Climate Change (BC3); IKERBASQUE, Basque foundation for science
            </organization>
            <organizationUrl>https://www.bc3research.org</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:http://github.com/integratedmodelling/klab.component.raster</connection>
        <developerConnection>scm:git:https://github.com/integratedmodelling/klab.component.raster</developerConnection>
        <url>https://github.com/integratedmodelling/klab.component.raster.git</url>
    </scm>

    <organization>
        <name>integratedmodelling.org</name>
        <url>http://www.integratedmodelling.org</url>
    </organization>

    <build>
        <plugins>
            <plugin>
                <groupId>org.integratedmodelling</groupId>
                <artifactId>klab.product</artifactId>
                <version>1.0.1-SNAPSHOT</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>package-component</goal>
                        </goals>
                        <configuration>
                            <componentName>klab.component.geospatial</componentName>
                            <componentDescription>2D Geospatial adapters and algorithms for k.LAB</componentDescription>
                            <componentVendorName>Integrated Modelling Partnership</componentVendorName>
                            <componentVendorEmail>info@integratedmodelling.org</componentVendorEmail>
                            <componentLicenseName>GNU Affero GPL 3.0</componentLicenseName>
                            <componentUsageRights>*</componentUsageRights>
                            <componentClass>org.integratedmodelling.geospatial.GeospatialPlugin</componentClass>
                            <componentVersion>1.0-SNAPSHOT</componentVersion>
                            <!--<excludedDependencies>com.fasterxml.jackson.core:*,com.fasterxml.jackson.databind:*</excludedDependencies>-->
                            <!--<excludedDependencies>xerces:xercesImpl,xml-apis:xml-apis,xpp3:xpp3</excludedDependencies>-->
                            <hostRuntimeArtifacts>
                                org.integratedmodelling:klab.service.runtime.server:1.0.0-SNAPSHOT,
                                org.integratedmodelling:klab.service.resources.server:1.0.0-SNAPSHOT
                            </hostRuntimeArtifacts>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit-platform</artifactId>
                        <version>${maven.surefire.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.geotools</groupId>
                <artifactId>gt-bom</artifactId>
                <version>${geotools.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.geotools</groupId>
                <artifactId>gt-platform-dependencies</artifactId>
                <version>${geotools.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.integratedmodelling</groupId>
            <artifactId>klab.core.services</artifactId>
            <version>${klab.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hortonmachine</groupId>
            <artifactId>hm-gears</artifactId>
            <version>${hortonmachine.version}</version>
        </dependency>
        <dependency>
            <groupId>com.konghq</groupId>
            <artifactId>unirest-java</artifactId>
            <version>3.14.5</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.javadev/underscore -->
        <!-- Source: https://mvnrepository.com/artifact/com.github.javadev/underscore -->
        <dependency>
            <groupId>com.github.javadev</groupId>
            <artifactId>underscore</artifactId>
            <version>1.120</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/commons-jxpath/commons-jxpath -->
        <dependency>
            <groupId>commons-jxpath</groupId>
            <artifactId>commons-jxpath</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-coverage</artifactId>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-geojson-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-shapefile</artifactId>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-swing</artifactId>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-transform</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>1.13.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>1.13.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-engine</artifactId>
            <version>1.13.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.davidmoten</groupId>
            <artifactId>aws-lightweight-client-java</artifactId>
            <version>0.1.16</version>
        </dependency>
        <dependency>
            <groupId>it.geosolutions.imageio-ext</groupId>
            <artifactId>imageio-ext-cog-reader</artifactId>
            <version>${imageio-ext.version}</version>
        </dependency>
        <dependency>
            <groupId>it.geosolutions.imageio-ext</groupId>
            <artifactId>imageio-ext-cog-rangereader-http</artifactId>
            <version>${imageio-ext.version}</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>osgeo-alt</id>
            <url>https://repo.osgeo.org/repository/release/</url>
        </repository>
        <!-- https://central.sonatype.org/publish/publish-portal-snapshots/#consuming-snapshot-releases-for-your-project -->
        <repository>
            <name>Central Portal Snapshots</name>
            <id>central-portal-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <!-- Old one -->
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>sonatype-nexus-snapshots</id>
            <name>Maven Central snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>
</project>